--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Posts</string>
+    <string name="know_more"><![CDATA[Know More >]]></string>
 </resources>
